# GRPO

./: .gitignore  README.md  config.yaml  countdown_task.py  main.py  pyproject.toml  train.py
logs/20250909-135248/: events.out.tfevents.1757393568.mlic.4109984.0  events.out.tfevents.1757393568.mlic.4109985.0  events.out.tfevents.1757393568.mlic.4109986.0  events.out.tfevents.1757393568.mlic.4109987.0
logs/20250909-135402/: events.out.tfevents.1757393642.mlic.4114939.0
logs/20250909-135403/: events.out.tfevents.1757393643.mlic.4114938.0  events.out.tfevents.1757393643.mlic.4114940.0  events.out.tfevents.1757393643.mlic.4114941.0
logs/20250909-135528/: events.out.tfevents.1757393728.mlic.4120741.0  events.out.tfevents.1757393728.mlic.4120742.0  events.out.tfevents.1757393728.mlic.4120743.0  events.out.tfevents.1757393728.mlic.4120744.0
logs/20250909-135721/: events.out.tfevents.1757393841.mlic.4128297.0  events.out.tfevents.1757393841.mlic.4128298.0  events.out.tfevents.1757393841.mlic.4128299.0  events.out.tfevents.1757393841.mlic.4128300.0
logs/20250909-140616/: events.out.tfevents.1757394376.mlic.4161082.0  events.out.tfevents.1757394376.mlic.4161084.0  events.out.tfevents.1757394376.mlic.4161085.0  events.out.tfevents.1757394376.mlic.4161086.0
logs/20250909-140801/: events.out.tfevents.1757394481.mlic.4167407.0  events.out.tfevents.1757394481.mlic.4167408.0  events.out.tfevents.1757394481.mlic.4167409.0  events.out.tfevents.1757394481.mlic.4167410.0
logs/20250909-140834/: events.out.tfevents.1757394514.mlic.4169479.0  (+3 more)
