[project]
name = "grpo-ex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.6.2",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.0",
    "torch>=2.8.0",
]
